# Jiripoca-ESP-IDF

./: .gitmodules
main/: CMakeLists.txt  idf_component.yml
main/headers/: acquire.h
main/sources/: acquire.c  save_send.c
