idf_component_register(SRCS "main\sources\main.c"
                            "main\sources\acquire.c"
                            "main\sources\save_send.c"
                            "main\sources\common.c"
                            "components\icm20948\src\icm20948.c"
                    INCLUDE_DIRS ".")